# Multibagger

./: .gitignore  3. ROADMAP.md  4. CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md  pyproject.toml
atlas/cli/: commands.py
atlas/config/: settings.py
atlas/core/: data_loader.py  downloader.py  universe_loader.py
atlas/indicators/: __init__.py  atr.py  base.py  ema.py  high_low.py  momentum_score.py  relative_strength.py  relative_volume.py
atlas/providers/: __init__.py  download_manager.py  market_data_provider.py  universe_provider.py
atlas/ranking/: __init__.py  engine.py
atlas/reporting/: __init__.py  chart_generator.py  report_generator.py
atlas/scanners/: __init__.py  base.py  institutional.py  momentum.py  vcp.py
atlas/watchlists/: __init__.py  exceptions.py  manager.py
data/universe/: my_watchlist.csv  nifty_midsmallcap_400.csv  test.csv  (+1 more)
docs/: ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  PROJECT_BRIEF.md
examples/: full_pipeline_demo.py  run_scan.py
tests/: test_atr_indicator.py  test_base_indicator.py  test_base_scanner.py  test_chart_generator.py  test_cli_commands.py  test_download.py  test_download_manager.py  test_ema_indicator.py  test_end_to_end_pipeline.py  test_high_low_indicator.py  test_institutional_scanner.py  test_loader.py  test_market_data_provider.py  test_momentum_scanner.py  test_momentum_score_indicator.py  test_ranking_engine.py  test_relative_strength_indicator.py  test_relative_volume_indicator.py  test_report_generator.py  test_universe.py  test_universe_provider.py  test_vcp_scanner.py  test_watchlist_manager.py
(+48 files in other folders)
