[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multibagger"
version = "0.1.0"
description = "Professional Momentum Stock Scanner"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "Riyas" }
]

dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "loguru>=0.7",
    "yfinance>=0.2.65",
    "tqdm>=4.67"
]

[project.scripts]
multibagger = "atlas.cli.commands:app"

[tool.setuptools]
packages = ["atlas"]

[tool.setuptools.package-data]
atlas = ["config/*.yaml"]